#time 2h 0m updating roadmap section and some more responsive tweaks

--- a/site/index.html
+++ b/site/index.html
@@ -335,126 +335,130 @@
                 <div class="roadmap-header">
                     <h2 id="theRoadmap">The Roadmap</h2>
                 </div>
-                <div class="roadmap-map">
-                    <div class="roadmap-map__line"></div>
-                    <div class="roadmap-map__item">
-                        <div class="roadmap-map__label">Q2</div>
-                        <div class="roadmap-map__bullet--mask"></div>
-                        <div class="roadmap-map__bullet"></div>
-                        <div class="roadmap-map__description">Token Launch</div>
+                <div class="roadmap-scroller">
+                    <div class="roadmap-map">
+                        <div class="roadmap-map__line"></div>
+                        <div class="roadmap-map__item">
+                            <div class="roadmap-map__label">DEC 2018</div>
+                            <div class="roadmap-map__bullet--mask"></div>
+                            <div class="roadmap-map__bullet">
+                                <img src="static/images/icons/icon-check.svg" />
+                            </div>
+                            <div class="roadmap-map__description">Private Pre-Sale</div>
+                        </div>
+                        <div class="roadmap-map__item">
+                            <div class="roadmap-map__label">Q2 2019</div>
+                            <div class="roadmap-map__bullet--mask"></div>
+                            <div class="roadmap-map__bullet"></div>
+                            <div class="roadmap-map__description">Public Token Sale</div>
+                        </div>
+                        <div class="roadmap-map__item">
+                            <div class="roadmap-map__label">Q4 2019</div>
+                            <div class="roadmap-map__bullet--mask"></div>
+                            <div class="roadmap-map__bullet"></div>
+                            <div class="roadmap-map__description">Testnet Launch</div>
+                        </div>
+                        <div class="roadmap-map__item">
+                            <div class="roadmap-map__label">Q4 2019</div>
+                            <div class="roadmap-map__bullet--mask"></div>
+                            <div class="roadmap-map__bullet"></div>
+                            <div class="roadmap-map__description">Consensus Network Launch</div>
+                        </div>
+                        <div class="roadmap-map__item">
+                            <div class="roadmap-map__label">Q1 2020</div>
+                            <div class="roadmap-map__bullet--mask"></div>
+                            <div class="roadmap-map__bullet"></div>
+                            <div class="roadmap-map__description">Integration with Wallets</div>
+                        </div>
+                        <div class="roadmap-map__item">
+                            <div class="roadmap-map__label">Q2 2020</div>
+                            <div class="roadmap-map__bullet--mask"></div>
+                            <div class="roadmap-map__bullet"></div>
+                            <div class="roadmap-map__description">Phase 2 Launch</div>
+                        </div>                 
+                        <div class="roadmap-map__item">
+                            <div class="roadmap-map__label">Q3 2020</div>
+                            <div class="roadmap-map__bullet--mask"></div>
+                            <div class="roadmap-map__bullet"></div>
+                            <div class="roadmap-map__description">Future Releases</div>
+                        </div> 
                     </div>
-                    <div class="roadmap-map__item">
-                        <div class="roadmap-map__label">Milestone 1</div>
-                        <div class="roadmap-map__bullet--mask"></div>
-                        <div class="roadmap-map__bullet -bullet2"></div>
-                        <div class="roadmap-map__description">100K USD CONSENSUS NETWORK</div>
-                    </div>
-                    <div class="roadmap-map__item">
-                        <div class="roadmap-map__label">Q3</div>
-                        <div class="roadmap-map__bullet--mask"></div>
-                        <div class="roadmap-map__bullet -bullet3"></div>
-                        <div class="roadmap-map__description">TRUE APP</div>
-                    </div>
-                    <div class="roadmap-map__item">
-                        <div class="roadmap-map__label">Q3</div>
-                        <div class="roadmap-map__bullet--mask"></div>
-                        <div class="roadmap-map__bullet -bullet4"></div>
-                        <div class="roadmap-map__description">CONSENSUS NETWORK LAUNCH</div>
-                    </div>
-                    <div class="roadmap-map__item">
-                        <div class="roadmap-map__label">Q2</div>
-                        <div class="roadmap-map__bullet--mask"></div>
-                        <div class="roadmap-map__bullet -bullet5"></div>
-                        <div class="roadmap-map__description">INITIAL PRICE FORMATION</div>
-                    </div>
-                    <div class="roadmap-map__item">
-                        <div class="roadmap-map__label">Q3</div>
-                        <div class="roadmap-map__bullet--mask"></div>
-                        <div class="roadmap-map__bullet -bullet6"></div>
-                        <div class="roadmap-map__description">True Wallet</div>
-                    </div>                 
-                    <div class="roadmap-map__item">
-                        <div class="roadmap-map__label">Q3</div>
-                        <div class="roadmap-map__bullet--mask"></div>
-                        <div class="roadmap-map__bullet -bullet7"></div>
-                        <div class="roadmap-map__description">$50 M USD</div>
-                    </div> 
                 </div>
                 <div class="roadmap-graphs__container">
                     <div class="roadmap-graphs">
                         <div class="roadmap-graphs__col">
-                            <h3>Token Distribution</h3>
-                            <img class="roadmap-graphs__svg -left-graph" src="static/images/roadmap/data-viz1.svg" />
-                        </div>
-                        <div class="roadmap-graphs__col">
-                            <ul class="roadmap-graphs__ul roadmap-graphs__ul--right">
-                                <li class="roadmap-graphs__item -blue">35% CROWDS</li>
-                                <li class="roadmap-graphs__item -red">25% FOUNDATION</li>
-                                <li class="roadmap-graphs__item -lightblue">24% CORPORATION</li>
-                                <li class="roadmap-graphs__item -lightgreen">10% REWARD POOL</li>
-                                <li class="roadmap-graphs__item -darkgreen">7% TEAMS & ADVISORS</li>
-                                <li class="roadmap-graphs__item -yellow">1% TRANSACTION COST</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="roadmap-graphs">
-                        <div class="roadmap-graphs__col">
-                                <ul class="roadmap-graphs__ul roadmap-graphs__ul--left">
-                                    <li class="roadmap-graphs__item -lightgreen">40% R&D SOFTWARE</li>
-                                    <li class="roadmap-graphs__item -red">25% ECOSYSTEM DEVELOPMENT</li>
-                                    <li class="roadmap-graphs__item -lightblue">20% PARTNERSHIP & MARKETING</li>
-                                    <li class="roadmap-graphs__item -blue">10% RESERVE</li>
-                                    <li class="roadmap-graphs__item -yellow">10% LEGAL</li>
-                                    <li class="roadmap-graphs__item -grey">5% OPERATIONS</li>
+                            <div class="roadmap-graphs__inner">
+                                <h3>Token Distribution</h3>
+                                <img class="roadmap-graphs__svg -left-graph" src="static/images/roadmap/data-viz1.svg" />
+                                <ul class="roadmap-graphs__ul">
+                                    <li class="roadmap-graphs__item -blue"><span>35%</span> Crowds</li>
+                                    <li class="roadmap-graphs__item -red"><span>25%</span> Foundation</li>
+                                    <li class="roadmap-graphs__item -lightblue"><span>24%</span> Corporation</li>
+                                    <li class="roadmap-graphs__item -lightgreen"><span>10%</span> Reward Pool</li>
+                                    <li class="roadmap-graphs__item -darkgreen"><span>7%</span> Teams & Advisors</li>
+                                    <li class="roadmap-graphs__item -yellow"><span>1%</span> Transation Cost</li>
                                 </ul>
                             </div>
+                        </div>
                         <div class="roadmap-graphs__col">
-                            <h3>Use of Proceeds</h3>
-                            <img class="roadmap-graphs__svg -right-graph" src="static/images/roadmap/data-viz2.svg" />
+                            <div class="roadmap-graphs__inner">
+                                <h3>Use of Proceeds</h3>
+                                <img class="roadmap-graphs__svg -right-graph" src="static/images/roadmap/data-viz2.svg" />
+                                <ul class="roadmap-graphs__ul">
+                                    <li class="roadmap-graphs__item -blue"><span>30%</span> R&D Software</li>
+                                    <li class="roadmap-graphs__item -red"><span>25%</span> Ecosystem Development</li>
+                                    <li class="roadmap-graphs__item -lightblue"><span>20%</span> Partnerships & Marketing</li>
+                                    <li class="roadmap-graphs__item -lightgreen"><span>10%</span> Reserve</li>
+                                    <li class="roadmap-graphs__item -darkgreen"><span>10%</span> Legal</li>
+                                    <li class="roadmap-graphs__item -yellow"><span>5%</span> Operations</li>
+                                </ul>   
+                            </div>
                         </div>
                     </div>
                 </div>
             </section>
 
             <section class="true-news">
-                <h2 id="theNews">True In The News</h2>
-                <div class="news-carousel__container">
-                    <a href="#" class="news-carousel__nav -previous">
-                        <img src="static/images/icons/icon-left-arrow.svg" />
-                    </a>
-                    <a href="#" class="news-carousel__nav -next">
-                        <img src="static/images/icons/icon-right-arrow.svg" />
-                    </a>
-                    <div id="newsCarousel" class="news-carousel">
-                        <div class="news-carousel__item">
-                            <div class="news-carousel__item--inner">
-                                <img src="static/images/logos/logo-huffington-post.png" />
-                                <p>Crypto powers social network, launches digital token aimed at powering social interactions.</p>
-                                <a href="#" class="button button-news">View Article</a>
+                <div class="true-news__inner">
+                    <h2 id="theNews">True In The News</h2>
+                    <div class="news-carousel__container">
+                        <a href="#" class="news-carousel__nav -previous">
+                            <img src="static/images/icons/icon-left-arrow.svg" />
+                        </a>
+                        <a href="#" class="news-carousel__nav -next">
+                            <img src="static/images/icons/icon-right-arrow.svg" />
+                        </a>
+                        <div id="newsCarousel" class="news-carousel">
+                            <div class="news-carousel__item">
+                                <div class="news-carousel__item--inner">
+                                    <img src="static/images/logos/logo-huffington-post.png" />
+                                    <p>Crypto powers social network, launches digital token aimed at powering social interactions.</p>
+                                    <a href="#" class="button button-news">View Article</a>
+                                </div>
                             </div>
-                        </div>
-                        <div class="news-carousel__item">
-                            <div class="news-carousel__item--inner">
-                                <img src="static/images/logos/logo-techcrunch.png" />
-                                <p>True is raising $100M to take on Facebook and other social media platforms, its the first of its kind to do an ICO.</p>
-                                <a href="#" class="button button-news">View Article</a>
+                            <div class="news-carousel__item">
+                                <div class="news-carousel__item--inner">
+                                    <img src="static/images/logos/logo-techcrunch.png" />
+                                    <p>True is raising $100M to take on Facebook and other social media platforms, its the first of its kind to do an ICO.</p>
+                                    <a href="#" class="button button-news">View Article</a>
+                                </div>
                             </div>
-                        </div>
-                        <div class="news-carousel__item">
-                            <div class="news-carousel__item--inner">
-                                <img src="static/images/logos/logo-ico-alert.png" />
-                                <p>ICO Alerta: True Coins, its the first established social networking platform to do an ICO.</p>
-                                <a href="#" class="button button-news">View Article</a>
+                            <div class="news-carousel__item">
+                                <div class="news-carousel__item--inner">
+                                    <img src="static/images/logos/logo-ico-alert.png" />
+                                    <p>ICO Alerta: True Coins, its the first established social networking platform to do an ICO.</p>
+                                    <a href="#" class="button button-news">View Article</a>
+                                </div>
                             </div>
-                        </div>
-                        <div class="news-carousel__item">
-                            <div class="news-carousel__item--inner">
-                                <img src="static/images/logos/logo-ico-alert.png" />
-                                <p>ICO Alerta: True Coins, its the first established social networking platform to do an ICO.</p>
-                                <a href="#" class="button button-news">View Article</a>
+                            <div class="news-carousel__item">
+                                <div class="news-carousel__item--inner">
+                                    <img src="static/images/logos/logo-ico-alert.png" />
+                                    <p>ICO Alerta: True Coins, its the first established social networking platform to do an ICO.</p>
+                                    <a href="#" class="button button-news">View Article</a>
+                                </div>
                             </div>
+                            
                         </div>
-                        
                     </div>
                 </div>
             </section>
