#time 2h 0m adding team section

--- a/site/index.html
+++ b/site/index.html
@@ -14,9 +14,9 @@
         <link rel="shortcut icon" href="https://s3.amazonaws.com/shyftassets/images/favicon.png" type="image/x-icon">
         <link rel="icon" href="https://s3.amazonaws.com/shyftassets/images/favicon.png" type="image/x-icon">
         -->
-        <script src="static/js/vendors.js?cache=bust6"></script>
+        <script src="static/js/vendors.js?cache=bust7"></script>
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-        <link rel="stylesheet" href="static/css/styles.css?cache=bust6">
+        <link rel="stylesheet" href="static/css/styles.css?cache=bust7">
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -466,7 +466,210 @@
             <section class="true-team">
                 <h2 id="theTeam">The Team</h2>
                 <div class="team-protraits">
-                    <div class="team-protraits-col">
+                    <div class="team-portraits__row">
+                        <div class="team-portraits__item">
+                            <div class="team-portraits__item--inner">
+                                <div class="team-portraits__item--image -bret"></div>
+                                <div class="team-portraits__item--bio">
+                                    <div class="-name">Bret Cox</div>
+                                    <div class="-position">CEO</div>
+                                    <div class="-contact-icons">
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-true.svg" />    
+                                        </a>
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-linkedin.svg" />    
+                                        </a>
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-twitter.svg" />    
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="team-portraits__item">
+                            <div class="team-portraits__item--inner">
+                                <div class="team-portraits__item--image -bret"></div>
+                                <div class="team-portraits__item--bio">
+                                    <div class="-name">Bret Cox</div>
+                                    <div class="-position">CEO</div>
+                                    <div class="-contact-icons">
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-true.svg" />    
+                                        </a>
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-linkedin.svg" />    
+                                        </a>
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-twitter.svg" />    
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="team-portraits__item">
+                            <div class="team-portraits__item--inner">
+                                <div class="team-portraits__item--image -bret"></div>
+                                <div class="team-portraits__item--bio">
+                                    <div class="-name">Bret Cox</div>
+                                    <div class="-position">CEO</div>
+                                    <div class="-contact-icons">
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-true.svg" />    
+                                        </a>
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-linkedin.svg" />    
+                                        </a>
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-twitter.svg" />    
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="team-portraits__item">
+                            <div class="team-portraits__item--inner">
+                                <div class="team-portraits__item--image -bret"></div>
+                                <div class="team-portraits__item--bio">
+                                    <div class="-name">Bret Cox</div>
+                                    <div class="-position">CEO</div>
+                                    <div class="-contact-icons">
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-true.svg" />    
+                                        </a>
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-linkedin.svg" />    
+                                        </a>
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-twitter.svg" />    
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="team-portraits__item">
+                            <div class="team-portraits__item--inner">
+                                <div class="team-portraits__item--image -bret"></div>
+                                <div class="team-portraits__item--bio">
+                                    <div class="-name">Bret Cox</div>
+                                    <div class="-position">CEO</div>
+                                    <div class="-contact-icons">
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-true.svg" />    
+                                        </a>
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-linkedin.svg" />    
+                                        </a>
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-twitter.svg" />    
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="team-portraits__item">
+                            <div class="team-portraits__item--inner">
+                                <div class="team-portraits__item--image -bret"></div>
+                                <div class="team-portraits__item--bio">
+                                    <div class="-name">Bret Cox</div>
+                                    <div class="-position">CEO</div>
+                                    <div class="-contact-icons">
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-true.svg" />    
+                                        </a>
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-linkedin.svg" />    
+                                        </a>
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-twitter.svg" />    
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="team-portraits__item">
+                            <div class="team-portraits__item--inner">
+                                <div class="team-portraits__item--image -bret"></div>
+                                <div class="team-portraits__item--bio">
+                                    <div class="-name">Bret Cox</div>
+                                    <div class="-position">CEO</div>
+                                    <div class="-contact-icons">
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-true.svg" />    
+                                        </a>
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-linkedin.svg" />    
+                                        </a>
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-twitter.svg" />    
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="team-portraits__item">
+                            <div class="team-portraits__item--inner">
+                                <div class="team-portraits__item--image -bret"></div>
+                                <div class="team-portraits__item--bio">
+                                    <div class="-name">Bret Cox</div>
+                                    <div class="-position">CEO</div>
+                                    <div class="-contact-icons">
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-true.svg" />    
+                                        </a>
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-linkedin.svg" />    
+                                        </a>
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-twitter.svg" />    
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="team-portraits__item">
+                            <div class="team-portraits__item--inner">
+                                <div class="team-portraits__item--image -bret"></div>
+                                <div class="team-portraits__item--bio">
+                                    <div class="-name">Bret Cox</div>
+                                    <div class="-position">CEO</div>
+                                    <div class="-contact-icons">
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-true.svg" />    
+                                        </a>
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-linkedin.svg" />    
+                                        </a>
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-twitter.svg" />    
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="team-portraits__item">
+                            <div class="team-portraits__item--inner">
+                                <div class="team-portraits__item--image -bret"></div>
+                                <div class="team-portraits__item--bio">
+                                    <div class="-name">Bret Cox</div>
+                                    <div class="-position">CEO</div>
+                                    <div class="-contact-icons">
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-true.svg" />    
+                                        </a>
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-linkedin.svg" />    
+                                        </a>
+                                        <a href="#" target="_blank">
+                                            <img src="static/images/icons/icon-team-twitter.svg" />    
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- <div class="team-protraits-col">
                         <div class="team-portraits__item">
                             <div class="team-portraits__item--image -bret"></div>
                             <div class="team-portraits__item--hover">
@@ -550,7 +753,7 @@
                                     Lead Product Designer
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </section>
@@ -594,6 +797,6 @@
             </section>
         </div>
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-        <script src="static/js/app.js?cache=bust6"></script>
+        <script src="static/js/app.js?cache=bust7"></script>
     </body>
 </html>
